# boruta-admin.openapi.json
@@ -98,7 +98,7 @@
                   "public_revoke": false,
                   "redirect_uris": [],
                   "refresh_token_ttl": 2592000,
-                  "relying_party": {
+                  "identity_provider": {
                     "id": "f74e3d72-b41c-4fad-aa38-635c45831a1e"
                   },
                   "secret": "GMx4LfhqIkLea1rzYGcr5cEmZ9ugif5EgKHQ3qgdvJ72Nyfyk9wC6YU7YICedaDEd8ZVNrOkoAV77dQPzBWLgm",
@@ -248,7 +248,7 @@
                   "public_revoke": false,
                   "redirect_uris": [],
                   "refresh_token_ttl": 2592000,
-                  "relying_party": {
+                  "identity_provider": {
                     "id": "f74e3d72-b41c-4fad-aa38-635c45831a1e"
                   },
                   "secret": "GMx4LfhqIkLea1rzYGcr5cEmZ9ugif5EgKHQ3qgdvJ72Nyfyk9wC6YU7YICedaDEd8ZVNrOkoAV77dQPzBWLgm",
@@ -935,13 +935,13 @@
         ]
       }
     },
-    "/api/relying-parties": {
+    "/api/identity-providers": {
       "get": {
         "tags": [
-          "Relying parties"
+          "identity providers"
         ],
-        "summary": "list relying parties",
-        "operationId": "listrelyingparties",
+        "summary": "list identity providers",
+        "operationId": "listidentityProviders",
         "parameters": [],
         "responses": {
           "200": {
@@ -952,7 +952,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/RelyingParty"
+                    "$ref": "#/components/schemas/IdentityProvider"
                   }
                 }
               }
@@ -990,20 +990,20 @@
       },
       "post": {
         "tags": [
-          "Relying parties"
+          "identity providers"
         ],
-        "summary": "create a relying party",
-        "operationId": "createarelyingparty",
+        "summary": "create a identity provider",
+        "operationId": "createaidentityProvider",
         "parameters": [],
         "requestBody": {
           "description": "",
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/createarelyingpartyrequest"
+                "$ref": "#/components/schemas/createaidentityProviderrequest"
               },
               "example": {
-                "relying_party": {
+                "identity_provider": {
                   "choose_session": true,
                   "confirmable": false,
                   "consentable": false,
@@ -1026,7 +1026,7 @@
                   "type": "object",
                   "properties": {
                     "data": {
-                      "$ref": "#/components/schemas/RelyingParty"
+                      "$ref": "#/components/schemas/IdentityProvider"
                     }
                   }
                 }
@@ -1042,16 +1042,16 @@
         ]
       }
     },
-    "/api/relying-parties/{relying_party_id}": {
+    "/api/identity-providers/{identity_provider_id}": {
       "get": {
         "tags": [
-          "Relying parties"
+          "identity providers"
         ],
-        "summary": "show a relying party",
-        "operationId": "showarelyingparty",
+        "summary": "show a identity provider",
+        "operationId": "showaidentityProvider",
         "parameters": [
           {
-            "name": "relying_party_id",
+            "name": "identity_provider_id",
             "in": "path",
             "description": "",
             "required": true,
@@ -1071,7 +1071,7 @@
                   "type": "object",
                   "properties": {
                     "data": {
-                      "$ref": "#/components/schemas/RelyingParty"
+                      "$ref": "#/components/schemas/IdentityProvider"
                     }
                   }
                 }
@@ -1110,13 +1110,13 @@
       },
       "patch": {
         "tags": [
-          "Relying parties"
+          "identity providers"
         ],
-        "summary": "update a relying party",
-        "operationId": "updatearelyingparty",
+        "summary": "update a identity provider",
+        "operationId": "updateaidentityProvider",
         "parameters": [
           {
-            "name": "relying_party_id",
+            "name": "identity_provider_id",
             "in": "path",
             "description": "",
             "required": true,
@@ -1131,10 +1131,10 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/updatearelyingpartyrequest"
+                "$ref": "#/components/schemas/updateaidentityProviderrequest"
               },
               "example": {
-                "relying_party": {
+                "identity_provider": {
                   "choose_session": true,
                   "confirmable": false,
                   "consentable": false,
@@ -1157,7 +1157,7 @@
                   "type": "object",
                   "properties": {
                     "data": {
-                      "$ref": "#/components/schemas/RelyingParty"
+                      "$ref": "#/components/schemas/IdentityProvider"
                     }
                   }
                 }
@@ -1196,13 +1196,13 @@
       },
       "delete": {
         "tags": [
-          "Relying parties"
+          "identity providers"
         ],
-        "summary": "delete a relying party",
-        "operationId": "deletearelyingparty",
+        "summary": "delete a identity provider",
+        "operationId": "deleteaidentityProvider",
         "parameters": [
           {
-            "name": "relying_party_id",
+            "name": "identity_provider_id",
             "in": "path",
             "description": "",
             "required": true,
@@ -1226,16 +1226,16 @@
         ]
       }
     },
-    "/api/relying-parties/{relying_party_id}/templates/{template_name}": {
+    "/api/identity-providers/{identity_provider_id}/templates/{template_name}": {
       "get": {
         "tags": [
-          "Relying parties"
+          "identity providers"
         ],
-        "summary": "show a relying party template",
-        "operationId": "showarelyingpartytemplate",
+        "summary": "show a identity provider template",
+        "operationId": "showaidentityProvidertemplate",
         "parameters": [
           {
-            "name": "relying_party_id",
+            "name": "identity_provider_id",
             "in": "path",
             "description": "",
             "required": true,
@@ -1306,7 +1306,7 @@
     "/api/users": {
       "get": {
         "tags": [
-          "Relying parties"
+          "identity providers"
         ],
         "summary": "list users",
         "operationId": "listusers",
@@ -1390,7 +1390,7 @@
             "public_revoke": false,
             "redirect_uris": [],
             "refresh_token_ttl": 2592000,
-            "relying_party": {
+            "identity_provider": {
               "id": "f74e3d72-b41c-4fad-aa38-635c45831a1e"
             },
             "secret": "GMx4LfhqIkLea1rzYGcr5cEmZ9ugif5EgKHQ3qgdvJ72Nyfyk9wC6YU7YICedaDEd8ZVNrOkoAV77dQPzBWLgm",
@@ -1458,8 +1458,8 @@
             "type": "integer",
             "format": "int32"
           },
-          "relying_party": {
-            "$ref": "#/components/schemas/RelyingParty"
+          "identity_provider": {
+            "$ref": "#/components/schemas/IdentityProvider"
           },
           "secret": {
             "type": "string"
@@ -1485,7 +1485,7 @@
           "public_revoke": false,
           "redirect_uris": [],
           "refresh_token_ttl": 2592000,
-          "relying_party": {
+          "identity_provider": {
             "id": "f74e3d72-b41c-4fad-aa38-635c45831a1e"
           },
           "secret": "GMx4LfhqIkLea1rzYGcr5cEmZ9ugif5EgKHQ3qgdvJ72Nyfyk9wC6YU7YICedaDEd8ZVNrOkoAV77dQPzBWLgm",
@@ -1525,7 +1525,7 @@
             "public_revoke": false,
             "redirect_uris": [],
             "refresh_token_ttl": 2592000,
-            "relying_party": {
+            "identity_provider": {
               "id": "f74e3d72-b41c-4fad-aa38-635c45831a1e"
             },
             "secret": "GMx4LfhqIkLea1rzYGcr5cEmZ9ugif5EgKHQ3qgdvJ72Nyfyk9wC6YU7YICedaDEd8ZVNrOkoAV77dQPzBWLgm",
@@ -1787,19 +1787,19 @@
           }
         }
       },
-      "createarelyingpartyrequest": {
-        "title": "createarelyingpartyrequest",
+      "createaidentityProviderrequest": {
+        "title": "createaidentityProviderrequest",
         "required": [
-          "relying_party"
+          "identity_provider"
         ],
         "type": "object",
         "properties": {
-          "relying_party": {
-            "$ref": "#/components/schemas/RelyingParty"
+          "identity_provider": {
+            "$ref": "#/components/schemas/IdentityProvider"
           }
         },
         "example": {
-          "relying_party": {
+          "identity_provider": {
             "choose_session": true,
             "confirmable": false,
             "consentable": false,
@@ -1809,8 +1809,8 @@
           }
         }
       },
-      "RelyingParty": {
-        "title": "RelyingParty",
+      "IdentityProvider": {
+        "title": "IdentityProvider",
         "required": [
           "choose_session",
           "confirmable",
@@ -1859,7 +1859,7 @@
           "content": {
             "type": "string"
           },
-          "relying_party_id": {
+          "identity_provider_id": {
             "type": "string"
           },
           "type": {
@@ -1869,7 +1869,7 @@
         "example": {
           "content": "<!DOCTYPE html>\n<html lang=\"en\">\n  <head>\n    <meta charset=\"utf-8\"/>\n    <meta http-equiv=\"X-UA-Compatible\" content=\"IE=edge\"/>\n    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\"/>\n    <link rel=\"stylesheet\" href=\"https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css\" integrity=\"sha512-8bHTC73gkZ7rZ7vpqUQThUDhqcNFyYi2xgDgPDHc+GXVGHXq+xPjynxIopALmOPqzo9JZj0k6OqqewdGO3EsrQ==\" crossorigin=\"anonymous\" />\n    <title>BorutaIdentity · Phoenix Framework</title>\n    <style>\n    html, body {\n      height: 100%;\n      margin: 0;\n    }\n\n    .wrapper {\n      height: 100%;\n      display: flex;\n    }\n\n    .main.message {\n      position: absolute;\n      top: 1rem;\n      left: 1rem;\n      right: 1rem;\n    }\n\n    header {\n      height: 100%;\n      width: 50%;\n      background-image: url('https://picsum.photos/1920/1080?grayscale');\n      background-size: cover;\n      background-position: center;\n    }\n\n    main {\n      flex: 1;\n      position: relative;\n      display: flex;\n      align-items: center;\n      justify-content: center;\n      padding: 1rem;\n    }\n\n    main>.content {\n      flex: 1;\n      max-width: 500px;\n    }\n\n    @media (max-width: 768px) {\n      header {\n        display: none;\n      }\n    }\n    </style>\n  </head>\n  <body>\n    <div class=\"wrapper\">\n      <header></header>\n      <main role=\"main\" class=\"container\">\n        <div class=\"content\">\n          {{#messages}}\n          <div class=\"ui main {{ type }} message\">\n            {{ content }}\n          </div>\n          {{/messages}}\n          {{> inner_content }}\n        </div>\n      </main>\n    </div>\n  </body>\n</html>\n",
           "id": null,
-          "relying_party_id": "75da9775-2f6f-4418-aff5-b98e63830079",
+          "identity_provider_id": "75da9775-2f6f-4418-aff5-b98e63830079",
           "type": "layout"
         }
       },
@@ -1896,23 +1896,23 @@
         "example": {
           "content": "<!DOCTYPE html>\n<html lang=\"en\">\n  <head>\n    <meta charset=\"utf-8\"/>\n    <meta http-equiv=\"X-UA-Compatible\" content=\"IE=edge\"/>\n    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\"/>\n    <link rel=\"stylesheet\" href=\"https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css\" integrity=\"sha512-8bHTC73gkZ7rZ7vpqUQThUDhqcNFyYi2xgDgPDHc+GXVGHXq+xPjynxIopALmOPqzo9JZj0k6OqqewdGO3EsrQ==\" crossorigin=\"anonymous\" />\n    <title>BorutaIdentity · Phoenix Framework</title>\n    <style>\n    html, body {\n      height: 100%;\n      margin: 0;\n    }\n\n    .wrapper {\n      height: 100%;\n      display: flex;\n    }\n\n    .main.message {\n      position: absolute;\n      top: 1rem;\n      left: 1rem;\n      right: 1rem;\n    }\n\n    header {\n      height: 100%;\n      width: 50%;\n      background-image: url('https://picsum.photos/1920/1080?grayscale');\n      background-size: cover;\n      background-position: center;\n    }\n\n    main {\n      flex: 1;\n      position: relative;\n      display: flex;\n      align-items: center;\n      justify-content: center;\n      padding: 1rem;\n    }\n\n    main>.content {\n      flex: 1;\n      max-width: 500px;\n    }\n\n    @media (max-width: 768px) {\n      header {\n        display: none;\n      }\n    }\n    </style>\n  </head>\n  <body>\n    <div class=\"wrapper\">\n      <header></header>\n      <main role=\"main\" class=\"container\">\n        <div class=\"content\">\n          {{#messages}}\n          <div class=\"ui main {{ type }} message\">\n            {{ content }}\n          </div>\n          {{/messages}}\n          {{> inner_content }}\n        </div>\n      </main>\n    </div>\n  </body>\n</html>\n",
           "id": null,
-          "relying_party_id": "75da9775-2f6f-4418-aff5-b98e63830079",
+          "identity_provider_id": "75da9775-2f6f-4418-aff5-b98e63830079",
           "type": "layout"
         }
       },
-      "updatearelyingpartyrequest": {
-        "title": "updatearelyingpartyrequest",
+      "updateaidentityProviderrequest": {
+        "title": "updateaidentityProviderrequest",
         "required": [
-          "relying_party"
+          "identity_provider"
         ],
         "type": "object",
         "properties": {
-          "relying_party": {
-            "$ref": "#/components/schemas/RelyingParty"
+          "identity_provider": {
+            "$ref": "#/components/schemas/IdentityProvider"
           }
         },
         "example": {
-          "relying_party": {
+          "identity_provider": {
             "choose_session": true,
             "confirmable": false,
             "consentable": false,
@@ -1922,8 +1922,8 @@
           }
         }
       },
-      "deletearelyingpartyrequest": {
-        "title": "deletearelyingpartyrequest",
+      "deleteaidentityProviderrequest": {
+        "title": "deleteaidentityProviderrequest",
         "required": [
           "scope"
         ],
@@ -1999,7 +1999,7 @@
       "name": "Upstreams"
     },
     {
-      "name": "Relying parties"
+      "name": "identity providers"
     },
     {
       "name": "Misc",
